<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".MyProfileActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="22dp"
        android:src="@drawable/icons8_circled_left_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/my_profile"
        android:textColor="@color/blackPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg_layout_profile"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/my_pict"
        app:civ_border_color="@color/bgPrimary"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/my_name"
        android:textColor="@color/whitePrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/bg_card_list"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/informasi"
            android:textAlignment="center"
            android:textColor="@color/blackPrimary"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/whiteSecond" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/mregular"
            android:text="@string/email"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/user_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/mregular"
            android:text="@string/nomor_telepone"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_telepone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/user_telp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/mregular"
            android:text="@string/address"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/user_alamat" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>