<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".ArticleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_article"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgheader_candi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/title_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mmedium"
                android:text="Nama Wisata"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/posted" />

                <TextView
                    android:id="@+id/posted_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/posted_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/by" />

                <TextView
                    android:id="@+id/posted_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/posted_by"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/mregular"
                android:text="@string/description"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>