<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_primary"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/bgPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bg_layout_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/my_pict"
            app:civ_border_color="@color/bgPrimary"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_wisata_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/mmedium"
            android:text="@string/city"
            android:textColor="@color/whitePrimary"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_wisata_country"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/mregular"
            android:text="@string/country"
            android:textColor="@color/whiteSecond"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_wisata_city" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/mmedium"
            android:text="@string/list_wisata"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_thumbnails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="12dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/item_row_article">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
